--- a/app/views/heading_states/index.html.erb
+++ b/app/views/heading_states/index.html.erb
@@ -1,14 +1,11 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Heading states</h1>
-
-<div id="heading_states">
-  <% @heading_states.each do |heading_state| %>
-    <%= render heading_state %>
-    <p>
-      <%= link_to "Show this heading state", heading_state %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New heading state", new_heading_state_path %>
+<%= turbo_frame_tag "notebooks" do %>
+  <div id="heading_states">
+    <% @heading_states.each do |heading_state| %>
+      <%= render heading_state %>
+      <p>
+        <%= link_to "Show this heading state", heading_state %>
+      </p>
+    <% end %>
+    <%= link_to "New heading state", new_heading_state_path %>
+  </div>
+<% end %>
