Add admin option to user form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div>
+    <%= form.label :admin %>
+    <%= form.check_box :admin %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
