--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,21 @@
 <%= turbo_frame_tag "notebooks" do %>
   <%= render @user %>
 
-  <div>
-    <%= link_to "Edit this user", edit_user_path(@user) %> |
-    <%= link_to "Back to users", users_path %>
-
-    <%= button_to "Destroy this user", @user, method: :delete %>
+  <div class="row">
+    <div class="col">
+      <div class="row gx-2">
+        <div class="col-auto">
+          <%= link_to "Edit", edit_user_path(@user), class: "btn btn-primary" %>
+        </div>
+        <% if admin? %>
+          <div class="col">
+            <%= link_to "Back to users", users_path, class: "btn btn-outline-secondary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="col-auto">
+      <%= button_to "Delete account", @user, method: :delete, class: "btn btn-outline-danger", form: { data: { turbo_confirm: "Delete user #{@user.username}?" } } %>
+    </div>
   </div>
 <% end %>
