--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,12 +6,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <%= link_to "Home", home_path, class: "nav-link", data: { turbo_frame: "notebooks" } %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "States", heading_states_path, class: "nav-link" %>
-        </li>
+        <% if logged_in? %>
+          <li class="nav-item">
+            <%= link_to "Home", home_path, class: "nav-link", data: { turbo_frame: "notebooks" } %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "States", heading_states_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
       <% if logged_in? %>
         <%= link_to current_user&.username, current_user, class: "nav-link me-3" %>
