Add pushover support

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="mb-2">
+    <%= form.label :pushover_user_key, class: "form-label" %>
+    <%= form.text_field :pushover_user_key, class: "form-control" %>
+  </div>
+
+  <div class="mb-2">
     <%= form.label :password, class: "form-label" %>
     <%= form.password_field :password, class: "form-control" %>
   </div>
