--- a/app/views/heading_states/_form.html.erb
+++ b/app/views/heading_states/_form.html.erb
@@ -11,22 +11,23 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+  <div class="mb-2">
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
+  </div>
+
+  <div class="mb-2">
+    <%= form.label :done, class: "form-check-label" %>
+    <%= form.check_box :done, class: "form-check-input" %>
+  </div>
+
+  <div class="mb-2 d-flex align-items-center">
+    <%= form.label :color, class: "form-check-label me-1" %>
+    <%= form.color_field :color, class: "form-input" %>
   </div>
 
   <div>
-    <%= form.label :done, style: "display: block" %>
-    <%= form.check_box :done %>
-  </div>
-
-  <div>
-    <%= form.label :color, style: "display: block" %>
-    <%= form.color_field :color %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
+    <%= link_to "Cancel", heading_states_path(heading_state), class: "btn btn-outline-secondary" %>
   </div>
 <% end %>
