--- a/app/views/heading_states/edit.html.erb
+++ b/app/views/heading_states/edit.html.erb
@@ -1,10 +1,4 @@
-<h1>Editing heading state</h1>
-
-<%= render "form", heading_state: @heading_state %>
-
-<br>
-
-<div>
-  <%= link_to "Show this heading state", @heading_state %> |
-  <%= link_to "Back to heading states", heading_states_path %>
-</div>
+<%= turbo_frame_tag "notebooks" do %>
+  <h1>Editing heading state</h1>
+  <%= render "form", heading_state: @heading_state %>
+<% end %>
