Fix new notebook css

--- a/app/views/notebooks/_form.html.erb
+++ b/app/views/notebooks/_form.html.erb
@@ -21,7 +21,7 @@
 
     <div>
       <%= form.submit class: "btn btn-primary" %>
-      <%= link_to "Cancel", notebooks_path, class: "btn btn-secondary" %>
+      <%= link_to "Cancel", notebooks_path, class: "btn btn-outline-secondary" %>
     </div>
   <% end %>
 </div>
