Overflow auto on heading contents

--- a/app/views/headings/_form.html.erb
+++ b/app/views/headings/_form.html.erb
@@ -54,7 +54,7 @@
 
     <div>
       <%= form.submit class: "btn btn-primary" %>
-      <%= link_to "Cancel", heading, class: 'btn btn-secondary' %>
+      <%= link_to "Cancel", heading, class: 'btn btn-outline-secondary' %>
     </div>
   <% end %>
 </div>
