--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -15,7 +15,7 @@
         <%= link_to '<i class="bi bi-arrows-angle-expand"></i>'.html_safe, heading, data:  { turbo_frame: "notebooks" } %>
         <%= button_to '<i class="bi bi-x-lg"></i>'.html_safe, heading, class: "text-danger", style: "border: none; background: none", form: { style: "display: inline", data: { turbo_confirm: "Delete heading \"#{heading.title}\" and all its sub-headings?" }}, method: :delete %>
       </summary>
-      <div>
+      <div class="overflow-auto">
         <% if heading.deadline %>
           <p>
             <strong>Deadline:</strong>
