--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           <div class="col-12 col-lg-auto order-first order-lg-last" data-home-target="agenda">
             <div class="row">
               <div class="col">
-                <div class="card shadow-sm p-3 pb-0 mb-3">
+                <div class="card shadow-sm p-3 mb-3">
                   <%= turbo_frame_tag "agenda" do %>
                     <%= render "headings/agenda", agenda_dates: Heading.where(user: current_user).agenda_dates %>
                   <% end %>
