Make new heading input look better on mobile

--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -44,7 +44,7 @@
         <% end %>
 
         <%= form_with(model: Heading.new(parent_id: heading.id)) do |form| %>
-          <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
+          <%= form.text_field :title, placeholder: '+', style: 'border: none', class: "mb-1 ms-1", autocomplete: 'off' %>
           <%= form.hidden_field :parent_id %>
         <% end %>
       </div>
