--- a/app/views/headings/_agenda_date.html.erb
+++ b/app/views/headings/_agenda_date.html.erb
@@ -28,7 +28,7 @@
           <% if heading.state %>
             <span style="color: <%= heading.state.color %>"><%= heading.state.name %></span>
           <% end %>
-          <%= link_to heading.title, heading, data: { turbo_frame: "notebooks" } %>
+          <%= link_to heading.title, heading, data: { turbo_frame: "_top" } %>
         </strong>
       </li>
     <% end %>
