--- a/app/views/notebooks/_notebook.html.erb
+++ b/app/views/notebooks/_notebook.html.erb
@@ -3,8 +3,8 @@
     <%= render heading %>
   <% end %>
 
-  <%= form_with(model: Heading.new(notebook_id: @notebook.id)) do |form| %>
-    <%= form.text_field :title, placeholder: '+', style: 'border: none', autocomplete: 'off' %>
+  <%= form_with(model: Heading.new(notebook_id: @notebook.id), html: { class: 'd-flex' }) do |form| %>
+    <%= form.text_field :title, placeholder: '+', style: 'border: none', class: 'flex-grow-1', autocomplete: 'off' %>
     <%= form.hidden_field :parent_id %>
     <%= form.hidden_field :notebook_id %>
   <% end %>
