Don't make new notebook too wide on phone

--- a/app/views/notebooks/_form.html.erb
+++ b/app/views/notebooks/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="mb-2" style="width: 350px">
+<div class="mb-2">
   
   <%= form_with(model: notebook) do |form| %>
     <% if notebook.errors.any? %>
