--- a/app/views/heading_states/_heading_state.html.erb
+++ b/app/views/heading_states/_heading_state.html.erb
@@ -1,20 +1,19 @@
 <div id="<%= dom_id heading_state %>">
-  <div class="row">
+  <div class="row mb-2">
+    <div class="col-auto my-auto">
+      <%= link_to "Edit", edit_heading_state_path(heading_state), class: "btn btn-outline-primary" %>
+    </div>
     <div class="col">
-      <ul class="list-unstyled">
+      <ul class="list-unstyled mb-0">
         <li>
           <strong>Name:</strong>
           <strong><span style="color: <%= heading_state.color %>"><%= heading_state.name %></span></strong>
         </li>
-
         <li>
           <strong>Done:</strong>
           <%= heading_state.done %>
         </li>
       </ul>
-    </div>
-    <div class="col-auto">
-      <%= link_to "Edit", edit_heading_state_path(heading_state), class: "btn btn-outline-primary" %>
     </div>
   </div>
 </div>
