--- a/app/views/heading_states/_form.html.erb
+++ b/app/views/heading_states/_form.html.erb
@@ -11,23 +11,24 @@
     </div>
   <% end %>
 
-  <div class="mb-2">
-    <%= form.label :name, class: "form-label" %>
-    <%= form.text_field :name, class: "form-control" %>
-  </div>
+  <div class="row">
+    <div class="col-12 col-sm mb-2">
+      <%= form.text_field :name, class: "form-control" %>
+    </div>
 
-  <div class="mb-2">
-    <%= form.label :done, class: "form-check-label" %>
-    <%= form.check_box :done, class: "form-check-input" %>
-  </div>
+    <div class="col-auto mb-2 d-flex align-items-center">
+      <%= form.label :color, class: "form-check-label me-1" %>
+      <%= form.color_field :color, class: "form-input" %>
+    </div>
 
-  <div class="mb-2 d-flex align-items-center">
-    <%= form.label :color, class: "form-check-label me-1" %>
-    <%= form.color_field :color, class: "form-input" %>
-  </div>
+    <div class="col-auto mb-2 d-flex align-items-center">
+      <%= form.label :done, class: "form-check-label me-1" %>
+      <%= form.check_box :done, class: "form-check-input" %>
+    </div>
 
-  <div>
-    <%= form.submit class: "btn btn-primary" %>
-    <%= link_to "Cancel", heading_states_path(heading_state), class: "btn btn-outline-secondary" %>
+    <div class="col-12">
+      <%= form.submit class: "btn btn-primary" %>
+      <%= link_to "Cancel", heading_states_path(heading_state), class: "btn btn-outline-secondary" %>
+    </div>
   </div>
 <% end %>
