--- a/app/views/heading_states/_form.html.erb
+++ b/app/views/heading_states/_form.html.erb
@@ -28,7 +28,7 @@
 
     <div class="col-12">
       <%= form.submit class: "btn btn-primary" %>
-      <%= link_to "Cancel", heading_states_path(heading_state), class: "btn btn-outline-secondary" %>
+      <%= link_to "Cancel", heading_states_path, class: "btn btn-outline-secondary" %>
     </div>
   </div>
 <% end %>
