--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -1,16 +1,20 @@
 <%= turbo_frame_tag heading do %>
-  <div data-controller="heading" data-heading-id-value="<%= heading.id %>" class="pb-2 ps-2 pe-1 mb-2 rounded-start" style="border-left: 3px solid <%= depth_color(heading.depth) %>">
+  <div data-controller="heading"
+       data-heading-id-value="<%= heading.id %>"
+       class="pb-2 ps-2 pe-1 mb-2 rounded-start"
+       style="border-left: 3px solid <%= depth_color(heading.depth) %>"
+  >
     <details data-heading-target="details" data-action="heading#toggle">
       <summary>
         <strong>
-          <span style="color: <%= heading.state&.color || 'inherit' %>" data-heading-target="state">
+          <span style="color: <%= heading.state&.color || 'inherit' %>" data-heading-target="state" data-action="click->heading#showStateSelector">
             <% if heading.state %>
               <%= heading.state.name %>
             <% else %>
               <span class="px-2" style="margin-left: -9px"></span>
             <% end %>
           </span>
-          <%= form_with(model: heading, html: { class: "me-1" ,data: { heading_target: "stateSelection" }, style: "display: none;" }) do |form| %>
+          <%= form_with(model: heading, html: { class: "me-1", data: { heading_target: "stateSelection", action: "change->heading#stateSelectionSubmit" }, style: "display: none;" }) do |form| %>
             <%= form.collection_select :heading_state_id, HeadingState.all, :id, :name, include_blank: true, class: "form-control" %>
           <% end %>
           <%= heading.title %>
