Add margin to bottom of deadline div in headline

--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -34,7 +34,7 @@
       </summary>
       <div class="overflow-auto">
         <% if heading.deadline || heading.scheduled || heading.closed_at %>
-          <div class="d-flex flex-column align-items-end font-monospace" style="width: fit-content; font-size: 14px;">
+          <div class="mb-1 d-flex flex-column align-items-end font-monospace" style="width: fit-content; font-size: 14px;">
             <% if heading.deadline %>
               <div>
                 <strong>Deadline:</strong>
