--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -58,9 +58,7 @@
         <p style="white-space: pre-wrap"><%= raw process_org_body(heading.body) %></p>
 
         <% unless local_assigns[:shallow] %>
-          <% heading.children.each do |child| %>
-            <%= render child %>
-          <% end %>
+          <%= render partial: "headings/heading", collection: heading.children %>
 
           <%= form_with(model: Heading.new(parent_id: heading.id), html: { class: 'd-flex' }) do |form| %>
             <%= form.text_field :title, placeholder: '+', style: 'border: none', class: "mb-1 ms-1 me-1 flex-grow-1", autocomplete: 'off' %>
