--- a/app/views/heading_properties/_heading_property.html.erb
+++ b/app/views/heading_properties/_heading_property.html.erb
@@ -1,7 +1,12 @@
-<%= turbo_frame_tag heading_property do %>
-  <tr>
-    <td class="font-monospace ps-0"><%= heading_property.key.upcase %></td>
-    <td class="font-monospace ps-2"><%= heading_property.value %></td>
-    <td></td>
-  </tr>
-<% end %>
+<tr id="<%= dom_id heading_property %>">
+  <td class="font-monospace ps-0"><%= heading_property.key.upcase %></td>
+  <td class="font-monospace ps-2"><%= heading_property.value %></td>
+  <td>
+    <%= button_to '<i class="bi bi-x-lg"></i>'.html_safe, heading_property, method: :delete,
+        class: "text-danger", style: "border: none; background: none",
+              form: { style: "display: inline",
+                data: { turbo_confirm: "Delete property \"#{heading_property.key}: #{heading_property.value}\"?"
+              }}
+      %>
+    </td>
+</tr>
