--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -15,14 +15,14 @@
             <% end %>
           </span>
           <%= form_with(model: heading, html: { class: "me-1", data: { heading_target: "stateSelection", action: "change->heading#stateSelectionSubmit" }, style: "display: none;" }) do |form| %>
-            <%= form.collection_select :heading_state_id, HeadingState.all, :id, :name, include_blank: true, class: "form-control" %>
+            <%= form.collection_select :heading_state_id, @heading_states_all ||= HeadingState.all, :id, :name, include_blank: true, class: "form-control" %>
           <% end %>
           <%= tag.span class: ("text-muted" if heading.state&.done) do %>
             <%= heading.title %>
           <% end %>
         </strong>
         <small id="<%= dom_id heading %>_children_count">
-          (<%= heading.children.size %>)
+          (<%= heading.children.length %>)
         </small>
         <div data-heading-target="options" style="display: inline-block">
           <%= link_to '<i class="bi bi-pencil"></i>'.html_safe, edit_heading_path(heading), title: "Edit" %>
