Add caching to heading properties

--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -56,7 +56,7 @@
           </div>
         <% end %>
 
-        <%= render "heading_properties/heading_properties", heading: heading %>
+        <%= render "heading_properties/heading_properties", heading: heading, cached: true %>
 
         <p style="white-space: pre-wrap"><%= raw process_org_body(heading.body) %></p>
 
