Add caching and includes to org rendering

--- a/app/views/headings/_heading.org.erb
+++ b/app/views/headings/_heading.org.erb
@@ -1,2 +1,2 @@
 <%== org_heading_render(heading) %>
-<%= render heading.children -%>
+<%= render collection: heading.children, partial: "headings/heading", cached: true -%>
