--- a/app/views/heading_properties/_heading_property.html.erb
+++ b/app/views/heading_properties/_heading_property.html.erb
@@ -2,11 +2,11 @@
   <td class="font-monospace ps-0"><%= heading_property.key.upcase %></td>
   <td class="font-monospace ps-2"><%= heading_property.value %></td>
   <td>
-    <%= button_to '<i class="bi bi-x-lg"></i>'.html_safe, heading_property, method: :delete,
-        class: "text-danger", style: "border: none; background: none",
-              form: { style: "display: inline",
-                data: { turbo_confirm: "Delete property \"#{heading_property.key}: #{heading_property.value}\"?"
-              }}
-      %>
-    </td>
+    <%= link_to '<i class="bi bi-x-lg"></i>'.html_safe, heading_property, class: "text-danger",
+          data: {
+            turbo_confirm: "Delete property \"#{heading_property.key}: #{heading_property.value}\"?",
+            turbo_method: :delete,
+          }
+    %>
+  </td>
 </tr>
