Make properties look better on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
     font-size: 15px;
   }
 
-  summary, td:nth-child(1), span {
+  summary, .heading_property_key, span {
     &:after {
       content: ':';
       position: relative;
