--- a/app/views/headings/edit.html.erb
+++ b/app/views/headings/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing heading</h1>
 
 <%= turbo_frame_tag @heading do %>
-  <div style="padding-left: 10px; padding-bottom: 10px; margin-bottom: 10px; border-left: 3px solid <%= depth_color(@heading.depth) %>; border-radius: 5px" class="pt-2">
+  <div class="py-2 ps-2 pe-1 mb-2 rounded-start" style="border-left: 3px solid <%= depth_color(@heading.depth) %>">
     <%= render "form", heading: @heading %>
     <% @heading.children.each do |child| %>
       <%= render child %>
