--- a/app/views/headings/_heading.html.erb
+++ b/app/views/headings/_heading.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag heading do %>
   <div data-controller="heading"
        data-heading-id-value="<%= heading.id %>"
-       class="pb-2 ps-2 pe-1 mb-2 rounded-start"
-       style="border-left: 3px solid <%= depth_color(heading.depth) %>"
+       class="pb-2 ps-2 pe-1 mb-2"
+       style="border-left: 2px solid <%= depth_color(heading.depth) %>"
   >
     <details data-heading-target="details" data-action="heading#toggle">
       <summary>
